refactor(flora-shell)@crush:来源过滤改为 UsageScenario 枚举场景限定，删除 ChannelId 与 allowedSourcePattern.
用 UsageScenario 枚举（CLI/AGENT）取代 ChannelId 字符串与 Command.allowedSourcePattern 正则来源过滤。Command 通过 usageScenarios() 自报可用场景，CommandService 构造时绑定一个场景、只接受声明支持该场景的命令注册，并对提交调用做来源一致性校验。同步更新 InputEvent/Invocation 来源类型、三个工具入口与设计文档。

💘 Generated with Crush

Assisted-by: Crush:deepseek-v4-flash